--- a/estilos03.css
+++ b/estilos03.css
@@ -1,5 +1,10 @@
-.container-header{
-  width: 100%;
-  height: 400px;
-  background-color: aqua;
+.explanatory-video {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.explanatory-video img {
+  width: 120px;
+  margin-top: 10px;
 }
